# scrollshelf-1

./: CMakeLists.txt
scrollshelf-core/: CMakeLists.txt
scrollshelf-core/src/: CMakeLists.txt
scrollshelf-core/src/database/: CMakeLists.txt
scrollshelf-core/src/database/include/database/: Database.h
scrollshelf-core/src/database/src/: Database.cpp
scrollshelf-core/src/document/: CMakeLists.txt
scrollshelf-core/src/document/include/document/: Document.h
scrollshelf-core/src/document/src/: Document.cpp
